Fix navbar overlapping scrollbar

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -9,7 +9,6 @@
 -----------------------------------------*/
 html {
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
@@ -19,7 +18,6 @@ body {
   background: $white;
   padding: 0 !important; // Hack to prevent body from shifting when modal opens
   height: 100%;
-  overflow-x: hidden;
 }
 
 .modal-open {
@@ -344,7 +342,8 @@ nav {
   /*box-shadow: 0px 0px 8px 5px #9A9A9A;*/
   color: #e4e3e1;
   z-index: 100;
-  display: block; }
+  display: block;
+}
 
 nav .left {
   list-style-type: none;
@@ -355,7 +354,8 @@ nav .left {
 
 nav .right {
   float: right !important;
-  margin-right: -15px; }
+  margin-right: -15px;
+}
 
 nav a {
   color: #e4e3e1;
