--- a/app/assets/css/pages/profile.scss
+++ b/app/assets/css/pages/profile.scss
@@ -1,8 +1,4 @@
 @import 'var.scss';
-body,
-html {
-    overflow-x: hidden;
-}
 a,
 p {
     color: $black;
